MainMethodTestCases/src/com/example/valid/Main16.java
package com.example.valid;

public class Main16 {

	/**
	 * Valid.
	 * 
	 * This is the most common form of the main method except that there aren't
	 * any spaces between the type, the square brackets and the variable name.
	 * It's still legal.
	 * 
	 * Source: https://rationalpi.wordpress.com/2007/01/29/main-methods-in-java/
	 */
	public static void main(String[]args) {
		System.out.println("Main16!");
	}

}
